--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,36 @@
 body {
     font-family: Arial, sans-serif;
-    padding: 20px;
-    background-color: #f6f6f6;
+    background-color: rgb(246, 246, 246, 0.2);
+    margin: auto;
+    background-image:url(../img/mesa_pc.jpg);
+    background-position: center; 
+    background-repeat: no-repeat;
+}
+
+.contenedor_h1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    background-color:#ffffff;
+}
+h1 {
+    color: #333;
+    font-size: 30px;
+    text-align: center;
+}
+
+.imagen_h1{
+    max-width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
 }
 
 h2, h3 {
-    color: #333;
+    color: #000000;
+    font-size: 25px;
 }
 
 a {
@@ -13,10 +38,12 @@ a {
     text-decoration: none;
 }
 
+
 table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
+    background-color: #ffffff;
 }
 
 th, td {
