--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #286090;
+    background-color: #903a00;
 }
 
 .obligatorio {
