--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ input[type="text"], input[type="email"] {
 }
 
 input[type="submit"] {
-    background-color: #337ab7;
+    background-color: #b75b33;
     color: #ffffff;
     padding: 10px 20px;
     border: none;
@@ -87,7 +87,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #903a00;
+    background-color: #b64b03;
 }
 
 .obligatorio {
